@@ -78,11 +78,6 @@ reg_info regs8051[] = {
   {REG_BIT, B5_IDX, REG_BIT, "b5", "b5", "bits", 5, 1},
   {REG_BIT, B6_IDX, REG_BIT, "b6", "b6", "bits", 6, 1},
   {REG_BIT, B7_IDX, REG_BIT, "b7", "b7", "bits", 7, 1},
-  {REG_GPR, X8_IDX, REG_GPR, "x8", "x8", "xreg", 0, 1},
-  {REG_GPR, X9_IDX, REG_GPR, "x9", "x9", "xreg", 1, 1},
-  {REG_GPR, X10_IDX, REG_GPR, "x10", "x10", "xreg", 2, 1},
-  {REG_GPR, X11_IDX, REG_GPR, "x11", "x11", "xreg", 3, 1},
-  {REG_GPR, X12_IDX, REG_GPR, "x12", "x12", "xreg", 4, 1},
   {REG_CND, CND_IDX, REG_CND, "C", "not_psw", "0xd0", 0, 1},
   {0, DPL_IDX, 0, "dpl", "dpl", "0x82", 0, 0},
   {0, DPH_IDX, 0, "dph", "dph", "0x83", 0, 0},
