@@ -33,8 +33,7 @@ enum
   R3_IDX, R2_IDX, R1_IDX, R0_IDX,
   B0_IDX, B1_IDX, B2_IDX, B3_IDX,
   B4_IDX, B5_IDX, B6_IDX, B7_IDX,
-  X8_IDX, X9_IDX, X10_IDX, X11_IDX,
-  X12_IDX, CND_IDX,
+  CND_IDX,
   DPL_IDX, DPH_IDX, B_IDX, A_IDX,
   END_IDX
 };
